--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+certifi==2017.4.17
+chardet==3.0.3
+coreapi==2.3.1
+coreschema==0.0.4
+decorator==4.0.11
 Django==1.11.2
 django-filter==1.0.4
 django-rest-swagger==2.1.2
@@ -5,5 +10,30 @@ djangorestframework==3.6.3
 djangorestframework-jwt==1.10.0
 factory-boy==2.8.1
 Faker==0.7.17
+idna==2.5
 ipython==6.1.0
 ipython-genutils==0.2.0
+itypes==1.1.0
+jedi==0.10.2
+MarkupSafe==1.0
+Naked==0.1.31
+openapi-codec==1.3.1
+pexpect==4.2.1
+pickleshare==0.7.4
+prompt-toolkit==1.0.14
+ptyprocess==0.5.1
+pycrypto==2.6.1
+Pygments==2.2.0
+PyJWT==1.5.0
+python-dateutil==2.6.0
+pytz==2017.2
+PyYAML==3.12
+requests==2.17.3
+shellescape==3.4.1
+simplegeneric==0.8.1
+simplejson==3.10.0
+six==1.10.0
+traitlets==4.3.2
+uritemplate==3.0.0
+urllib3==1.21.1
+wcwidth==0.1.7
