--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-filter==1.0.4
 django-rest-swagger==2.1.2
 djangorestframework==3.6.3
 djangorestframework-jwt==1.10.0
+django-cors-headers==2.1.0
 factory-boy==2.8.1
 Faker==0.7.17
 idna==2.5
